# pybok

./: CONTRIBUTION.md  README.md  pyproject.toml  setup.py
.github/workflows/: lint_format.yaml  test.yaml  unit_tests.yaml
pybok/: __init__.py  argsconstructor.py  base.py  base_decorator.py  builder.py  configuration_properties.py  copy.py  data.py  decorators.py  equals_and_hashcode.py  getter.py  log.py  setter.py  singleton.py  to_json.py  types.py  utility_class.py  wither.py
test/: logger.json  test_argsconstructor.py  test_builder.py  test_configuration_properties.py  test_copy.py  test_data.py  test_equals_and_hashcode.py  test_getter.py  test_log.py  test_order.py  test_setter.py  test_singleton.py  test_to_json.py  test_to_string.py  test_utility_class.py  test_wither.py
